    - update debian/build/rules.mk
  * Make the debian/control autogeneration a bit cleaner
    - update debian/build/config.mk
    - update debian/build/dump-langpack-control-entries.pl
    - update debian/build/rules.mk
    - update debian/control.in
  * Don't set stuff that is set by dpkg-buildpackage
    - update debian/build/config.mk
    - update debian/build/rules.mk

 -- Chris Coulson <chris.coulson@canonical.com>  Wed, 15 May 2013 12:22:10 +0100

firefox-trunk (23.0~a1~hg20130512r131644-0ubuntu1) saucy; urgency=low

  * New upstream snapshot v23.0 A1 HG20130512R131644

  * Manually stage the testsuite in debian/tmp and dh_install it in to the
    package from there rather than from objdir/dist, as dh_install is called
    after we have created the breakpad symbols, which modifies the files
    in objdir/dist and causes dh_strip to fail later on
    - update debian/build/mozbuild.mk
    - update debian/firefox-testsuite.install.in
  * Build conflict on python-progressbar, as having this installed causes the
    jit test harness to fail
    - update debian/control.in
  * Disable unsupported W3C webgl tests
    - update debian/testing/extra/mochitest/mochitest.json
  * Fix test_langpack_chrome.js for Hindi, Mongolian, Swedish and Tamil
    - update debian/testing/extra/xpcshell/package-tests/test_langpack_chrome.js
  * Fix failure to populate Replaces on 12.10 and later (LP: #1165408)
    - update debian/rules
  * Refresh paths for a11y tests after landing of bmo: #854868
    - update debian/testing/extra/mochitest/mochitest-chrome.json
  * Disable some unsupported tests that test search healthreporting, as these
    don't work on Ubuntu where the searchplugins are not in the application
    directory
    - update debian/testing/extra/mochitest/mochitest-chrome.json
  * Make firefox-globalmenu a real transitional package
    - update debian/control.in
    - update debian/build/mozbuild.mk