@@ -1,3 +1,6 @@
+@MOZ_LIBDIR@/components/httpd.js
+@MOZ_LIBDIR@/components/httpd.manifest
+@MOZ_LIBDIR@/components/test_necko.xpt
 @MOZ_LIBDIR@/xpcshell
 @MOZ_LIBDIR@/testing
 
