@@ -19,6 +19,18 @@ firefox-trunk (24.0~a1~hg20130516r132020-0ubuntu1) UNRELEASED; urgency=low
   * Don't set stuff that is set by dpkg-buildpackage
     - update debian/build/config.mk
     - update debian/build/rules.mk
+  * Run the xpcshell binary from the actual install directory rather than
+    the temporary test directory, as some tests assume this now (eg, the
+    distribution/ directory is assumed to be in the same directory as
+    xpcshell). This means we also have to install httpd.js et al in to
+    the actual components/ directory, as the upstream test harness assumes
+    this too. This fixes test_ubuntu_searchplugins.js test failures since
+    the distribution/ directory was moved back up a level on disk
+    - update debian/build/rules.mk
+    - update debian/firefox-testsuite.install.in
+    - update debian/firefox.install.in
+    - update debian/testing/run_xpcshell_tests
+    - update debian/testing/testrunhelper.py
 
  -- Chris Coulson <chris.coulson@canonical.com>  Wed, 15 May 2013 12:22:10 +0100
 
